--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.0",
+    "clsx": "^2.0.0",
+    "js-cookie": "^3.0.5",
+    "next": "^13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-feather": "^2.0.10"
   }
 }
