--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-next",
+  "name": "next-dark-mode",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
-    "next": "^13.4.1",
+    "next": "14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10"
